sms spam detector.

--- a/sms-spam-detector.ipynb
+++ b/sms-spam-detector.ipynb
@@ -96,7 +96,12 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### 3- preprocessing the data:"
+    "#### 3- preprocessing the data:\n",
+    "to download the `en_core_web_sm` we use this command\n",
+    "```shell\n",
+    "python -m spacy download en_core_web_sm\n",
+    "```\n",
+    "for better result consider downloading  **en_core_web_lg**"
    ],
    "metadata": {
     "collapsed": false
@@ -108,6 +113,20 @@
    "outputs": [],
    "source": [
     "nlp = spacy.load(\"en_core_web_sm\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "For any machine learning project, once you've gathered the data, the first step is to process it to make useful inputs to your model.\n",
+    "\n",
+    "- Remove noise: You will first want to remove noise from your data -- that is, remove words that don't tell you much about the content. These include all common words like 'I, you, are, is, etc...' that would not give us enough information on the sentiment.\n",
+    "- We'll also remove stock market tickers, retweet symbols, hyperlinks, and hashtags because they can not tell you a lot of information on the sentiment.\n",
+    "- You also want to remove all the punctuation from a tweet. The reason for doing this is because we want to treat words with or without the punctuation as the same word, instead of treating \"happy\", \"happy?\", \"happy!\", \"happy,\" and \"happy.\" as different words.\n",
+    "- Finally, you want to use stemming to only keep track of one variation of each word. In other words, we'll treat \"motivation\", \"motivated\", and \"motivate\" similarly by grouping them within the same stem of \"motiv-\"."
    ],
    "metadata": {
     "collapsed": false
@@ -257,7 +276,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### 4- train the model:"
+    "#### 4- train the model:\n",
+    "for the classifier we use **Naive Bayes** that prove its Effectiveness in case of classification in NLP."
    ],
    "metadata": {
     "collapsed": false
@@ -268,7 +288,7 @@
    "execution_count": 34,
    "outputs": [],
    "source": [
-    "model_classefier = MultinomialNB()"
+    "model_classifier = MultinomialNB()"
    ],
    "metadata": {
     "collapsed": false
@@ -289,7 +309,7 @@
     }
    ],
    "source": [
-    "model_classefier.fit(X_train,  y_train)"
+    "model_classifier.fit(X_train,  y_train)"
    ],
    "metadata": {
     "collapsed": false
@@ -301,7 +321,17 @@
    "outputs": [],
    "source": [
     "X_test = cv.transform(X_test)\n",
-    "y_pred = model_classefier.predict(X_test)"
+    "y_pred = model_classifier.predict(X_test)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "to measure how good our model is we use F1_score that combine between recall and precision like this.\n",
+    "In statistical analysis of binary classification, the F-score or F-measure is a measure of a test's accuracy. It is calculated from the precision and recall of the test, where the precision is the number of true positive results divided by the number of all positive results, including those not identified correctly, and the recall is the number of true positive results divided by the number of all samples that should have been identified as positive. Precision is also known as positive predictive value, and recall is also known as sensitivity in diagnostic binary classification."
    ],
    "metadata": {
     "collapsed": false
